--- a/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
+++ b/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl xmlns:editors="clr-namespace:Diagnosis.App.Controls.Editors"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              xmlns:search="clr-namespace:Diagnosis.App.Controls.Search"
+             xmlns:screens="clr-namespace:Diagnosis.App.Screens"
              x:Class="Diagnosis.App.Controls.Editors.HealthRecordEditorShared"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,7 +9,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:vm="clr-namespace:Diagnosis.ViewModels"
              x:Name="editor"
-             Padding="0,10,0,0"
              mc:Ignorable="d"
              d:DesignHeight="200" d:DesignWidth="600">
     <!--DataContext is HrEditorViewModel-->
@@ -16,12 +16,9 @@
         <Style TargetType="Label" BasedOn="{StaticResource label90}" />
     </UserControl.Resources>
 
-    <!--DataContext is editing HealthRecordViewModel -->
-    <Grid x:Name="hr_grid" DataContext="{Binding HealthRecord}" MouseDown="hr_grid_MouseDown" Focusable="True" Background="Transparent">
+    <Grid x:Name="hr_grid" MouseDown="hr_grid_MouseDown" Focusable="True" Background="Transparent">
         <Grid.InputBindings>
-            <KeyBinding Modifiers="Control" Key="S" Command="{Binding Editable.CommitCommand}" />
-            <KeyBinding Key="Escape" Command="{Binding Editable.RevertCommand}" />
-            <KeyBinding Key="Delete" Command="{Binding Editable.DeleteCommand}" />
+           
         </Grid.InputBindings>
 
         <Grid.ColumnDefinitions>
@@ -30,7 +27,17 @@
             <ColumnDefinition Width="auto" />
         </Grid.ColumnDefinitions>
 
-        <StackPanel VerticalAlignment="Center">
+        <Button Command="{Binding CloseCommand}" Width="16" Height="16" 
+                VerticalAlignment="Top" HorizontalAlignment="Right"
+                ToolTip="Закрыть редактор, сохранив все изменения" 
+                Grid.Column="2">
+            <DockPanel>
+                <Image Source="{StaticResource closeImage}"  Width="16" />
+            </DockPanel>
+        </Button>
+        
+        <!--DataContext is CardViewModel-->
+        <StackPanel VerticalAlignment="Center" DataContext="{Binding DataContext, RelativeSource={RelativeSource AncestorType=screens:NewCard}}">
             <StackPanel.Resources>
                 <Style TargetType="Button">
                     <Setter Property="Padding" Value="5,10" />
@@ -39,13 +46,14 @@
                 </Style>
             </StackPanel.Resources>
 
-            <Button Command="{Binding DataContext.MoveHrSelectionCommand, RelativeSource={RelativeSource AncestorType=UserControl, AncestorLevel=2}}"
+            <Button Command="{Binding Appointment.MoveHrSelectionCommand}"
                     CommandParameter="{StaticResource True}" ToolTip="Открыть предыдущую запись (Crtl + Стрелка вверх)">↑</Button>
-            <Button Command="{Binding DataContext.MoveHrSelectionCommand, RelativeSource={RelativeSource AncestorType=UserControl, AncestorLevel=2}}"
+            <Button Command="{Binding Appointment.MoveHrSelectionCommand}"
                     CommandParameter="{StaticResource False}" ToolTip="Открыть следующую запись (Crtl + Стрелка вниз)" >↓</Button>
         </StackPanel>
 
-        <StackPanel Grid.Column="1">
+        <!--DataContext is editing HealthRecordViewModel -->
+        <StackPanel Grid.Column="1" DataContext="{Binding HealthRecord}" Margin="0,10,0,0">
             <StackPanel.Resources>
                 <Style TargetType="DockPanel" BasedOn="{StaticResource formLine}" />
             </StackPanel.Resources>
@@ -97,6 +105,7 @@
             </DockPanel>
         </StackPanel>
 
+        <!--DataContext is HrEditorViewModel-->
         <StackPanel Grid.Column="2" Margin="20,0,0,0" VerticalAlignment="Center">
             <StackPanel.Resources>
                 <Style TargetType="Button">
@@ -111,7 +120,7 @@
                 </Style>
             </StackPanel.Resources>
 
-            <Button Command="{Binding DataContext.AddHealthRecordCommand, RelativeSource={RelativeSource AncestorType=UserControl, AncestorLevel=2}}"
+            <Button Command="{Binding DataContext.Appointment.AddHealthRecordCommand,  RelativeSource={RelativeSource AncestorType=screens:NewCard}}"
                     ToolTip="Добавить запись (Ctrl + Enter)"
                     Margin="0,0,0,20">
                 <DockPanel>
@@ -119,19 +128,13 @@
                     <TextBlock Text="Добавить" />
                 </DockPanel>
             </Button>
-            <Button Command="{Binding SaveCommand}" ToolTip="Закрыть редактор, сохранив все изменения (Ctrl + S)">
-                <DockPanel>
-                    <Image Source="{StaticResource saveImage}" />
-                    <TextBlock Text="Закрыть" />
-                </DockPanel>
-            </Button>
-            <Button Command="{Binding CancelCommand}" ToolTip="Закрыть редактор без сохранения изменений (Esc)">
+            <Button Command="{Binding RevertCommand}" ToolTip="Отменить изменения">
                 <DockPanel>
                     <Image Source="{StaticResource undoImage}" />
                     <TextBlock Text="Отменить" />
                 </DockPanel>
             </Button>
-            <Button Command="{Binding DeleteCommand}" Margin="0,10,0,0" ToolTip="Удалить текущую запись (Del)">
+            <Button Command="{Binding DeleteCommand}" Margin="0,10,0,0" ToolTip="Удалить запись (Del)">
                 <DockPanel>
                     <Image Source="{StaticResource deleteImage}"  Width="16" />
                     <TextBlock Text="Удалить" />
