--- a/Diagnosis.App/Controls/CardParts/HealthRecord.xaml
+++ b/Diagnosis.App/Controls/CardParts/HealthRecord.xaml
@@ -11,6 +11,7 @@
              Background="Transparent"
              Focusable="True"
              IsTabStop="True">
+    <!--DataContext is ShortHealthRecordViewModel-->
     <UserControl.Resources>
         <Style TargetType="StackPanel" x:Key="hidingButtons">
             <Setter Property="Visibility" Value="Collapsed" />
@@ -21,9 +22,15 @@
             </Style.Triggers>
         </Style>
     </UserControl.Resources>
+    <UserControl.ContextMenu>
+        <ContextMenu>
+            <MenuItem Header="Редактировать" Command="{Binding EditCommand}" />
+            <MenuItem Header="Искать" Command="{Binding SendToSearchCommand}" />
+            <MenuItem Header="Удалить" Command="{Binding DeleteCommand}" />
+        </ContextMenu>
+    </UserControl.ContextMenu>
     
-    <!--DataContext is HealthRecordViewModel-->
-    <Grid>
+    <Grid>        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20" />
             <ColumnDefinition Width="*" />
@@ -75,6 +82,9 @@
         <StackPanel x:Name="buttons" Grid.Column="2" Style="{StaticResource hidingButtons}">
             <StackPanel.Resources>
                 <Style TargetType="Image" BasedOn="{StaticResource buttonIcon}" />
+                <Style TargetType="Button">
+                    <Setter Property="Height" Value="16" />
+                </Style>
             </StackPanel.Resources>
             <Button Command="{Binding SendToSearchCommand}" Margin="10,0,0,0" ToolTip="Искать (Alt + F)">
                 <Image Source="{StaticResource findImage}" />
