--- a/Diagnosis.App/Controls/Editors/ComboBoxDatePicker.xaml
+++ b/Diagnosis.App/Controls/Editors/ComboBoxDatePicker.xaml
@@ -2,9 +2,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:Converters="clr-namespace:Diagnosis.App.Converters" 
+             xmlns:Converters="clr-namespace:Diagnosis.App.Converters"
              x:Class="Diagnosis.App.Controls.Editors.ComboBoxDatePicker"
-             mc:Ignorable="d"             
+             mc:Ignorable="d"
              d:DesignWidth="300"
              x:Name="root">
     <UserControl.Resources>
@@ -13,25 +13,28 @@
     </UserControl.Resources>
     <StackPanel Orientation="Horizontal">
         <StackPanel.Resources>
-            <Style x:Key="comboRight" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource {x:Type ComboBox}}" >
+            <Style x:Key="comboRight" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource {x:Type ComboBox}}">
                 <Setter Property="Margin" Value="0,0,5,0" />
             </Style>
         </StackPanel.Resources>
         <ComboBox x:Name="comboYears"
                   Style="{StaticResource comboRight}"
-            MinWidth="50"
-            SelectionChanged="comboYears_SelectionChanged"
-            IsEditable="True"
-            SelectedValue="{Binding Year, Mode=TwoWay, Converter={StaticResource IntToString}, ElementName=root}" />
+                  MinWidth="50"
+                  IsEditable="True"
+                  SelectionChanged="comboYears_SelectionChanged"
+                  LostFocus="comboYears_LostFocus"
+                  SelectedValue="{Binding Year, Mode=TwoWay, Converter={StaticResource IntToString}, ElementName=root}" />
         <ComboBox x:Name="comboMonths"
                   Style="{StaticResource comboRight}"
-            MinWidth="80"
-            SelectionChanged="comboMonths_SelectionChanged"
-            SelectedValue="{Binding Month, Mode=TwoWay, Converter={StaticResource MonthToString}, ElementName=root}" />
+                  MinWidth="80"
+                  SelectionChanged="comboMonths_SelectionChanged"
+                  SelectedValue="{Binding Month, Mode=TwoWay, Converter={StaticResource MonthToString}, ElementName=root}" />
         <ComboBox x:Name="comboDays"
-            MinWidth="40"
-            IsEditable="True"
-            SelectedValue="{Binding Day, Mode=TwoWay, Converter={StaticResource IntToString}, ElementName=root}" >
+                  MinWidth="40"
+                  IsEditable="True"
+                  SelectionChanged="comboDays_SelectionChanged"
+                  LostFocus="comboDays_LostFocus"
+                  SelectedValue="{Binding Day, Mode=TwoWay, Converter={StaticResource IntToString}, ElementName=root}">
         </ComboBox>
     </StackPanel>
 </UserControl>
