not editable label
--HG--
branch : patientEditor

--- a/Diagnosis.App/Screens/NewPatientEditor.xaml
+++ b/Diagnosis.App/Screens/NewPatientEditor.xaml
@@ -75,7 +75,7 @@
             <!-- PatientViewModel -->
             <DockPanel>
                 <Label Content="Метка" />
-                <TextBox Text="{Binding Label, ValidatesOnDataErrors=True}" />
+                <TextBlock Text="{Binding Label, ValidatesOnDataErrors=True}" />
             </DockPanel>
             <DockPanel>
                 <Label Content="Фамилия" />
