--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -6,9 +6,9 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Converters/Shared.xaml" />
-                <ResourceDictionary Source="Resources/Shared.xaml" />
-                <ResourceDictionary Source="Styles/Shared.xaml" />
+                <ResourceDictionary Source="Resources/ConverterResources.xaml" />
+                <ResourceDictionary Source="Resources/ImageResources.xaml" />
+                <ResourceDictionary Source="Styles/SharedStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
                 <s:Boolean x:Key="True">True</s:Boolean>
