--- a/Diagnosis.App/Windows/SettingsWindow.xaml
+++ b/Diagnosis.App/Windows/SettingsWindow.xaml
@@ -5,24 +5,19 @@
         windows:DialogCloser.DialogResult="{Binding DialogResult}"
         Title="Настройки" Height="150" Width="300" ShowInTaskbar="False" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
     <Window.Resources>
-        <Style TargetType="Button">
-            <Setter Property="Width" Value="100"/>
-            <Setter Property="Height" Value="23"/>
-            <Setter Property="Margin" Value="5"/>
-        </Style>
     </Window.Resources>
-    <Grid>
+    <Grid Margin="0,0,10,10">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <ListBox>
+        <ListBox Margin="10,10,0,0">
             <CheckBox IsChecked="{Binding ShowIcdDisease}" Content="Использовать _МКБ"/>
             <CheckBox IsChecked="{Binding OnlyTopLevelIcdDisease}" Content="_Болезни МКБ только верхнего уровня"/>
         </ListBox>
 
-        <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Right">
+        <StackPanel Grid.Row="1" Style="{StaticResource DialogButtonsPanel}">
             <Button Name="saveButton" IsDefault="True" Command="{Binding SaveCommand}">_Сохранить</Button>
             <Button Name="cancelButton" IsCancel="True">Отмена</Button>
         </StackPanel>
